--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header{
 .card > header {
     background-color: #288088;
     border: 2px solid #45ADAD;
-    padding: 20px 0 0 20px; 
+    padding: 20px 0 20px 0; 
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
 }
